# bindy

./: .git-init.sh  .gitignore  .gitleaks.toml  .rustfmt.toml  .trivyignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  Makefile  QUICKSTART.md  README.md  RECORD_DELETION_ROADMAP.md  SECURITY.md  TESTING.md  TEST_SUMMARY.md  book.toml  digest-report.md  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml  deny.toml
.claude/: CHANGELOG.md  CLAUDE.md  SKILL.md  optimization-recommendations.md  settings.json
.claude/rules/: documentation.md
.github/: COMPLIANCE_ROADMAP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: compliance-critical-rbac-least-privilege.md  compliance-critical-signed-commits.md  compliance-critical-vulnerability-scanning.md  compliance-high-security-policy.md  feature-rndc-secret-reload.md
.github/actions/: README.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yaml  codeql.yml  dependabot-auto-merge.yaml  docs.yaml  e2e.yaml  ghcr-cleanup.yaml  integration.yaml  license-scan.yaml  main.yaml  pr.yaml  rebuild-release-images.yaml  release.yaml  sbom.yml  scorecard.yml  security-scan.yaml  slsa.yml  update-image-digests.yaml
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
calm/: README.md  bindy-control-plane.architecture.json  bindy-multi-cluster.architecture.json
core-bind9/: DEPLOYMENT.md  FILE_MANIFEST.sh  MOTHERSHIP_INTEGRATION.md  README.md  SUMMARY.md  configmap.yaml  deploy.sh  deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  rbac.yaml  secret-rndc.yaml  service-dns.yaml  service-loadbalancer.yaml  service-rndc.yaml  verify.sh
deploy/: README.md  TESTING.md  kind-cleanup.sh  kind-config.yaml  kind-deploy.sh  kind-scout-config.yaml  kind-test.sh  pod-hardening.yaml
deploy/admission-policies/: 01-bindy-acl-policy.yaml  02-bindy-acl-binding.yaml  03-bindy-zone-name-policy.yaml  04-bindy-zone-name-binding.yaml  05-bindy-rndc-strict-policy.yaml  06-bindy-rndc-strict-binding.yaml  07-bindy-pod-shape-policy.yaml  08-bindy-pod-shape-binding.yaml  09-bindy-dnssec-policy-policy.yaml  10-bindy-dnssec-policy-binding.yaml  11-bindy-operator-workload-sa-policy.yaml  12-bindy-operator-workload-sa-binding.yaml  13-bindy-record-value-policy.yaml  14-bindy-record-value-binding.yaml  15-bindy-image-provenance-policy.yaml  16-bindy-image-provenance-binding.yaml  README.md
deploy/controller/: configmap.yaml  deployment.yaml
deploy/crds/: aaaarecords.crd.yaml  arecords.crd.yaml  bind9clusters.crd.yaml  bind9globalclusters.crd.yaml  bind9instances.crd.yaml  caarecords.crd.yaml  clusterbind9providers.crd.yaml  cnamerecords.crd.yaml  dns-crds.yaml  dnszones.crd.yaml  kustomization.yaml  mxrecords.crd.yaml  nsrecords.crd.yaml  srvrecords.crd.yaml  txtrecords.crd.yaml
deploy/operator/: configmap.yaml  deployment.yaml  namespace.yaml
deploy/rbac/: role-admin.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml  verify-rbac.sh
deploy/scout/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  remote-cluster-rbac.yaml  role.yaml  rolebinding.yaml  secrets-reader-rbac.yaml  serviceaccount.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.chainguard  Dockerfile.chef  Dockerfile.fast  Dockerfile.local  README.md
docs/: .gitignore  .markdownlint.json  CHANGELOG.md  DOCUMENTATION_REVIEW_2025-12-09.md  GITHUB_PAGES_SETUP.md  LOADTEST_ROADMAP.md  MKDOCS_QUICKSTART.md  README.md  STATUS_CONDITIONS.md  STATUS_CONDITIONS_DESIGN.md  STATUS_CONDITIONS_IMPLEMENTATION.md  STATUS_CONDITIONS_PHASE3_SUMMARY.md  STATUS_CONDITIONS_PHASE4-5_SUMMARY.md  book.toml  deprecation-policy.md  dns_error_usage.md  grafana-dashboard-bindcar.json  grafana-dashboard.json  mermaid-init.js  mkdocs.yml  pyproject.toml
docs/adr/: 0001-rndc-secret-reload.md  0002-scout-deployment-topology.md
docs/book/: changelog.html  introduction.html  license.html  print.html  rustdoc.html  searchindex.js  toc.html  toc.js
docs/compliance/: README.md  cis-kubernetes.md  crypto-audit.md  fips.md  nist-800-53.md  sox-controls.md
docs/features/: rndc-secret-reload.md
docs/roadmaps/: CLUSTER_PROVIDER_RECONCILIATION_OPTIMIZATION.md  CODE_EFFICIENCY_REFACTORING_PLAN.md  (+53 more)
examples/: README.md  a-records.yaml  bind9-cluster-custom-service.yaml  bind9-cluster-with-rotation.yaml  bind9-cluster-with-storage.yaml  bind9-cluster.yaml  bind9-instance.yaml  cluster-bind9-provider.yaml  complete-setup.yaml  custom-zones-configmap.yaml  dns-records.yaml  dns-zone-multi-nameserver.yaml  dns-zone.yaml  dnssec-signing-enabled.yaml  dnszone-selection-methods.yaml  httproute-dns.yaml  multi-tenancy.yaml  round-robin-dns.yaml  scout-demo.yaml  storage-pvc.yaml  tcproute-dns.yaml  tlsroute-dns.yaml  zone-label-selector.yaml
operator/: __init__.py  __main__.py
scripts/: build-docker-fast.sh  calm-docs.sh  fix-mkdocs-links.sh  pin-image-digests.sh  pre-commit-gitleaks.sh  setup-docs-env.sh  validate-examples.sh
src/: bind9.rs  bind9.rs.backup  bind9_acl.rs  bind9_acl_tests.rs  bind9_resources.rs  bind9_resources_tests.rs  bind9_tests.rs  bootstrap.rs  bootstrap_tests.rs  constants.rs  context.rs  context_tests.rs  crd.rs  crd_docs.rs  crd_docs_tests.rs  crd_tests.rs  ddns.rs  ddns_tests.rs  dns_errors.rs  dns_errors_tests.rs  http_errors.rs  http_errors_tests.rs  labels.rs  lib.rs  main.rs  main_tests.rs  metrics.rs  namespace_scope.rs  namespace_scope_tests.rs  record_controller.rs  record_controller_tests.rs  record_impls.rs  record_impls_tests.rs  record_operator.rs  record_operator_tests.rs  record_wrappers.rs  record_wrappers_tests.rs  safe_volume.rs  safe_volume_tests.rs  scout.rs  (+5 more)
templates/: named.conf.options.tmpl  named.conf.tmpl  rndc.conf.tmpl
tests/: README.md  __init__.py  cluster_provider_resilience_test.sh  force-delete-ns.sh  integration_test.sh  multi_tenancy_integration.rs  regression_test.sh  run_multi_tenancy_tests.sh  simple_integration.rs  test_config.py  test_validation.py
vex/: bindy.openvex.json
(+424 files in other folders)
