[package]
name = "bindy"
version = "0.1.0"
edition = "2021"
authors = ["Erick Bourgeois <erick@hjeb.ca>"]
description = "BIND9 DNS Controller for Kubernetes"
license = "MIT"
repository = "https://github.com/firestoned/bindy"
documentation = "https://firestoned.github.io/bindy/"
homepage = "https://firestoned.github.io/bindy/"
readme = "README.md"
keywords = ["kubernetes", "dns", "bind9", "controller", "operator"]
categories = ["network-programming", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
kube = { version = "2.0", features = ["runtime", "derive", "client"] }
kube-lease-manager = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
k8s-openapi = { version = "0.26", features = ["v1_32", "schemars"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
rand = "0.8"
hickory-client = { version = "0.24", features = ["dnssec"] }
hickory-proto = { version = "0.24", features = ["dnssec"] }
url = "2.5.7"
bindcar = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mdbook-toc = "0.14.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[[bin]]
name = "crddoc"
path = "src/bin/crddoc.rs"
