[package]
name = "bindy"
version = "0.3.4"
edition = "2021"
rust-version = "1.85"
authors = ["Erick Bourgeois <erick@hjeb.ca>"]
description = "BIND9 DNS Operator for Kubernetes"
license = "MIT"
repository = "https://github.com/firestoned/bindy"
documentation = "https://firestoned.github.io/bindy/"
homepage = "https://firestoned.github.io/bindy/"
readme = "README.md"
keywords = ["kubernetes", "dns", "bind9", "operator", "operator"]
categories = ["network-programming", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
kube = { version = "2.0", features = ["runtime", "derive", "client"] }
kube-lease-manager = "0.10"
# Only include needed tokio features for faster compilation
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
k8s-openapi = { version = "0.26", features = ["v1_30", "schemars"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
base64 = "0.22"
rand = "0.10"
hickory-client = { version = "0.24", features = ["dnssec", "dnssec-ring"] }
hickory-proto = { version = "0.24", features = ["dnssec", "dnssec-ring"] }
url = "2.5.7"
bindcar = "0.5.4"
prometheus = "0.14"
axum = "0.7"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
# Faster builds: use fewer codegen units and shared generics
codegen-units = 256
# Incremental compilation (default, but explicit)
incremental = true

# Optimize dependencies in dev builds for better runtime performance
[profile.dev.package."*"]
opt-level = 1
# Keep debug info minimal for dependencies
debug = false

# Fast check profile - for cargo check and IDE support
[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = false
incremental = true

# Test profile optimizations
[profile.test]
inherits = "dev"
# Optimize tests slightly for faster execution
opt-level = 1

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[[bin]]
name = "crddoc"
path = "src/bin/crddoc.rs"
