[package]
name = "bindy"
version = "0.5.2"
edition = "2021"
rust-version = "1.94"
authors = ["Erick Bourgeois <erick@jeb.ca>"]
description = "BIND9 DNS Operator for Kubernetes"
license = "MIT"
repository = "https://github.com/firestoned/bindy"
documentation = "https://firestoned.github.io/bindy/"
homepage = "https://firestoned.github.io/bindy/"
readme = "README.md"
keywords = ["kubernetes", "dns", "bind9", "operator", "operator"]
categories = ["network-programming", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
kube = { version = "3.1", features = ["runtime", "derive", "client", "jsonpatch"] }
kube-lease-manager = "0.11.1"
# JSON Patch construction for atomic finalizer add/remove with `test` guards
# (mirrors kube-runtime's own finalizer helper; same version kube-core uses)
json-patch = "4.2"
# Only include needed tokio features for faster compilation
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.2"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
k8s-openapi = { version = "0.27", features = ["v1_31", "schemars"] }
# ring-only: use "rustls-no-provider", NOT reqwest's "rustls" feature. The
# latter is an alias for "__rustls-aws-lc-rs", which force-enables the aws-lc-rs
# crypto backend across the whole dependency graph and pulls in aws-lc-sys
# (C/assembly). "rustls-no-provider" leaves the crypto backend unset so reqwest
# uses the process-default provider, which we install as ring in main.rs.
reqwest = { version = "0.13", features = ["json", "rustls-no-provider"], default-features = false }
base64 = "0.22"
rand = "0.10"
hickory-net = { version = "0.26", features = ["dnssec-ring"] }
hickory-proto = { version = "0.26", features = ["dnssec-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
url = "2.5.8"
# Types-only dependency (CreateZoneRequest / ZoneConfig / SoaRecord / ZONE_TYPE_*).
# bindcar 0.7.0 gates its kube 4.0 / k8s-openapi 0.28 deps behind the optional
# `k8s-token-review` feature (default = []), so this does not conflict with the
# operator's own kube 3.1 / k8s-openapi 0.27 stack.
bindcar = "0.7"
prometheus = "0.14"
axum = "0.8"
sha2 = "0.11"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
# Faster builds: use fewer codegen units and shared generics
codegen-units = 256
# Incremental compilation (default, but explicit)
incremental = true

# Optimize dependencies in dev builds for better runtime performance
[profile.dev.package."*"]
opt-level = 1
# Keep debug info minimal for dependencies
debug = false

# Fast check profile - for cargo check and IDE support
[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = false
incremental = true

# Test profile optimizations
[profile.test]
inherits = "dev"
# Optimize tests slightly for faster execution
opt-level = 1

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[[bin]]
name = "crddoc"
path = "src/bin/crddoc.rs"
