[tool.poetry]
name = "bindy"
version = "0.1.0"
description = "Kubernetes operator for managing BIND9 DNS infrastructure"
authors = ["Erick Bourgeois <erick@hjeb.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/firestoned/bindy"
repository = "https://github.com/firestoned/bindy"
keywords = ["kubernetes", "operator", "dns", "bind9", "kopf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
kopf = "^1.37.0"
kubernetes = "^28.1.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"
dnspython = "^2.4.2"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"

[tool.poetry.scripts]
bind9-operator = "operator.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
